# token_contracts

./: .gitignore  Cargo.toml  compile.md
artifacts/: checksums.txt  checksums_intermediate.txt  distribute.wasm  kpt.wasm  kpt_distribute.wasm  seilor.wasm  ve_kpt.wasm
contracts/dispatcher/: Cargo.toml  README.md
contracts/dispatcher/examples/: schema.rs
contracts/dispatcher/schema/: dispatcher.json
contracts/dispatcher/src/: contract.rs  error.rs  handler.rs  helper.rs  lib.rs  msg.rs  querier.rs  state.rs
contracts/distribute/: Cargo.toml  README.md
contracts/distribute/examples/: schema.rs
contracts/distribute/schema/: distribute.json
contracts/distribute/src/: contract.rs  error.rs  handler.rs  helper.rs  querier.rs
contracts/kpt/: Cargo.toml  README.md
contracts/kpt/src/: contract.rs  handler.rs  mint_receiver.rs  msg.rs  querier.rs  state.rs
contracts/kpt_distribute/: Cargo.toml
contracts/kpt_distribute/schema/: kpt_distribute.json
contracts/kpt_distribute/src/: lib.rs  (+4 more)
contracts/seilor/: Cargo.toml  README.md
contracts/treasure/: Cargo.toml  README.md
contracts/treasure/examples/: schema.rs
contracts/treasure/schema/: treasure.json
contracts/treasure/schema/raw/: execute.json  instantiate.json  query.json  response_to_query_config_infos.json  response_to_query_user_infos.json
contracts/treasure/src/: contract.rs  error.rs  handler.rs  helper.rs  lib.rs  msg.rs  querier.rs  random_rules.rs  state.rs
contracts/treasure/src/testing/: integration.rs  mock_fn.rs  mock_third_fn.rs  tests.rs
contracts/ve_kpt/: Cargo.toml  README.MD
(+66 files in other folders)
