[package]
name = "treasure"
version = "0.1.0"
edition = "2021"
authors = ["simba.dto"]

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-std = { version = "1.2.5" }
cosmwasm-storage = { version = "1.2.5" }
cw-storage-plus = "1.1.0"
schemars = "0.8.12"
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
cosmwasm-schema = "1.2.5"
thiserror = "1.0.40"
cw2 = "1.0.1"
cw20 = { version = "1.0.1" }
cw20-base = { version = "1.0.1", features = ["library"] }
cw-utils = "1.0.1"
serde_json = "1.0.64"
sha2 = "0.10.7"
hex = "0.4.3"


[dev-dependencies]
cw-multi-test = "0.16.5"
proptest = "1.2.0"
cosmwasm-schema = "1.2.5"
